# OpenDartboard

./: .commands  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  apt-packages.txt  build.deb.ps1  build.deb.sh  docker-compose.yml  dockerfile  install.sh  install_relay.sh  installer.sh  make.sh
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
distributions/debian_arm64/: control  postinst  postrm
docs/: api.md  detectors.md
scripts/: export-includes.sh  lock_cams.sh  release.sh
src/: main.cpp  scorer.cpp  scorer.hpp
src/communication/: score_queue.cpp  score_queue.hpp  websocket_service.cpp  websocket_service.hpp
src/detector/: dart_detector.hpp  detector_factory.hpp  detector_interface.hpp
src/detector/ai/: ai_detector.hpp.test  yolo_detector.cpp.test  yolo_detector.hpp.test
src/detector/geometry/: geometry_calibration.cpp  geometry_calibration.hpp  geometry_dartboard.cpp  geometry_dartboard.hpp  geometry_detector.cpp  geometry_detector.hpp
src/detector/geometry/calibration/: bull_processing.cpp  bull_processing.hpp  color_processing.cpp  color_processing.hpp  contour_processing.cpp  contour_processing.hpp  dartboard_visualization.hpp  ellipse_processing.cpp  ellipse_processing.hpp  geometry_calibration.cpp  geometry_calibration.hpp  mask_processing.cpp  mask_processing.hpp  orientation_processing.cpp  orientation_processing.hpp  perspective_processing.cpp  perspective_processing.hpp  roi_processing.cpp  roi_processing.hpp  wire_processing.cpp  wire_processing.hpp
src/detector/geometry/detection/: dart_processing.cpp  dart_processing.hpp  motion_processing.cpp  motion_processing.hpp  score_processing.cpp  score_processing.hpp
src/detector/geometry/utils/: color_utils.hpp  dartboard_visualization.hpp  geometry_utils.hpp  math_utils.hpp
src/scorer/: scorer.cpp  scorer.hpp
src/utils/: args.hpp  autocam.hpp  cache.hpp  camera.hpp  colors.hpp  debug.hpp  logging.hpp  math.hpp  signals.hpp  streamer.hpp  utils.hpp
templates/: lock_cams.service.template  opendartboard.service.template
testers/: index.html  streamers_test.html  websocket_test.html
viewer/: viewer.html
